--- a/static/index.html
+++ b/static/index.html
@@ -1,13 +1,15 @@
 <html>
   <head>
     <title>WebGL - Simple triangle</title>
+		<link rel="stylesheet" href="style.css"/>
+
   </head>
   <body>
+    <div>fps: <span id="fps"></span></div>
     <canvas id="game-surface" width="1920" height="1080">
       Your browser does not support HTML5
     </canvas>
-    <br />
-    <i>Demo is above this text</i>
+    
     <script src="../dist/bundle.js"></script>
   </body>
 </html>
