--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,7 @@
     <canvas id="game-surface" width="1920" height="1080">
       Your browser does not support HTML5
     </canvas>
+    <input type="file" id="fff">
     
     <script src="../dist/bundle.js"></script>
   </body>
